--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     
 
     <link rel="stylesheet" href="/styles/main.css">
-    
+    <link rel="stylesheet" href="/styles/home.css">
+    <link rel="stylesheet" href="/styles/responsive.css">
 
 </head>
 <body>
@@ -20,7 +21,7 @@
         <div class="content">
             <header>
                 <img src="/assets/logo.svg" alt="Logomarca">
-                <a href="https:\\facebook.com">
+                <a href="#">
                     <span></span>
                     Cadastre um ponto de coleta
                 </a>
